# CursoFastAPI

./: .coverage  pyproject.toml
app/: main.py
tests/: .coverage  test_app.py
